client/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: hsl(40, 23%, 95%);
  --dark-green: hsl(104, 100, 30);
  --light-green: hsl(86, 46, 72);
  --text-green: hsl(93, 74, 17);
}

@media (prefers-color-scheme: light) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: "League Spartan", "Lalezar";
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

span.ripple {
  position: absolute;
  border-radius: 50%;
  transform: scale(0);
  animation: ripple 400ms linear;
  background-color: rgba(255, 255, 255, 0.4);
}

@keyframes ripple {
  to {
    transform: scale(4);
    opacity: 0;
  }
}

